--- a/frontend/src/app/component/main/main.component.css
+++ b/frontend/src/app/component/main/main.component.css
@@ -148,3 +148,10 @@ button {
 	justify-content: flex-end;
 	padding: 20px;
 }
+
+.main-container {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+}
