feat(frontend): add logic for login/sign up

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -8,3 +8,5 @@
     <app-main (menuEvent)="switchMenu()"></app-main>
   </div>  
 </div>
+
+<app-login-modal (closeEvent)="closeLogIn()" *ngIf="showLogin"></app-login-modal>
