--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
 		
   <div class="menu" [class.hidden]="hideMenu">
-    <app-menu></app-menu>
+    <app-menu (settingsEvent)="openSettings()"></app-menu>
   </div>
 
   <div class="window-container">
@@ -10,3 +10,5 @@
 </div>
 
 <app-login-modal (closeEvent)="closeLogIn()" *ngIf="showLogin"></app-login-modal>
+<app-settings (closeEvent)="closeSettings()" *ngIf="showSettings"></app-settings>
+{{showSettings}}
