--- a/frontend/src/app/component/menu/menu.component.html
+++ b/frontend/src/app/component/menu/menu.component.html
@@ -3,5 +3,7 @@
     <li><span class="item-icon"><i class="fa fa-clock"></i></span> <span class="item-name">Timeline</span></li>
     <li><span class="item-icon"><i class="fa fa-star"></i></span> <span class="item-name">Achievements</span></li>
     <li><span class="item-icon"><i class="fa fa-newspaper"></i></span> <span class="item-name">News</span></li>
-    <li><span class="item-icon"><i class="fa fa-cog"></i></span> <span class="item-name">Settings</span></li>
+    <li (click)="openSettings()">
+        <span class="item-icon"><i class="fa fa-cog"></i></span> <span class="item-name">Settings</span>
+    </li>
 </ul>
