feat(frontend): add basic timeline view

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
 		
   <div class="menu" [class.hidden]="hideMenu">
-    <app-menu (settingsEvent)="openSettings()"></app-menu>
+    <app-menu (settingsEvent)="openSettings()" (timelineEvent)="openTimeline()"></app-menu>
   </div>
 
   <div class="window-container">
@@ -11,4 +11,4 @@
 
 <app-login-modal (closeEvent)="closeLogIn()" *ngIf="showLogin"></app-login-modal>
 <app-settings (closeEvent)="closeSettings()" *ngIf="showSettings"></app-settings>
-{{showSettings}}
+<app-settings (closeEvent)="closeTimeline()" *ngIf="showTimeline"></app-settings>
