--- a/frontend/src/app/component/menu/menu.component.html
+++ b/frontend/src/app/component/menu/menu.component.html
@@ -1,6 +1,8 @@
 <ul>
     <li><span class="item-icon"><i class="fa fa-home"></i></span> <span class="item-name">Garden</span></li>
-    <li><span class="item-icon"><i class="fa fa-clock"></i></span> <span class="item-name">Timeline</span></li>
+    <li (click)="openTimeline()">
+        <span class="item-icon"><i class="fa fa-clock"></i></span> <span class="item-name">Timeline</span>
+    </li>
     <li><span class="item-icon"><i class="fa fa-star"></i></span> <span class="item-name">Achievements</span></li>
     <li><span class="item-icon"><i class="fa fa-newspaper"></i></span> <span class="item-name">News</span></li>
     <li (click)="openSettings()">
