--- a/frontend/src/app/component/timeline-modal/timeline-modal.component.html
+++ b/frontend/src/app/component/timeline-modal/timeline-modal.component.html
@@ -1,1 +1,13 @@
-<p>timeline-modal works!</p>
+<div class="modal-container">
+    <div class="modal">
+        <hr />
+        <h2>Timeline</h2>
+        <div class="card">
+            
+        </div>
+        
+        <div class="modal-buttons">
+            <button class="outlined-btn" (click)="close()">Close</button>
+        </div>
+    </div>
+</div>
