--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -11,4 +11,4 @@
 
 <app-login-modal (closeEvent)="closeLogIn()" *ngIf="showLogin"></app-login-modal>
 <app-settings (closeEvent)="closeSettings()" *ngIf="showSettings"></app-settings>
-<app-settings (closeEvent)="closeTimeline()" *ngIf="showTimeline"></app-settings>
+<app-timeline-modal (closeEvent)="closeTimeline()" *ngIf="showTimeline"></app-timeline-modal>
