feat(frontend): add basic page navigation in timeline view

--- a/frontend/src/app/component/timeline-modal/timeline-modal.component.css
+++ b/frontend/src/app/component/timeline-modal/timeline-modal.component.css
@@ -1,1 +1,17 @@
 @import '../css/modal.css';
+
+.plant {
+    width: 50px;
+}
+
+.failed {
+    background-color: darkred;
+}
+
+.succeed {
+    background-color: greenyellow;
+}
+
+.event {
+    display: flex;
+}
