--- a/frontend/src/app/component/timeline-modal/timeline-modal.component.html
+++ b/frontend/src/app/component/timeline-modal/timeline-modal.component.html
@@ -3,9 +3,17 @@
         <hr />
         <h2>Timeline</h2>
         <div class="card">
-            <div class="event" *ngFor="let pomodoro of pomodoros">
-                {{pomodoro.start}} - {{pomodoro.finish}}
+            <div class="event" *ngFor="let pomodoro of pomodoros" [class.succeed]="pomodoro.succeed" [class.failed]="pomodoro.failed">
+                <div>
+                    <img class="plant" src="../../../assets/tomato5.svg" />
+                </div>
+                <div>
+                    <span>{{pomodoro.start | date: 'HH:mm dd MMM yyyy'}}</span>
+                    <span *ngIf="pomodoro.failed || pomodoro.succeed"> {{pomodoro.finish | date: 'HH:mm dd MMM yyyy'}}</span>
+                </div>
             </div>
+            <button class="outlined-btn" [class.blocked]="page<=0" (click)="loadPage(page-1)">Prev</button>
+            <button class="outlined-btn" [class.blocked]="page>=totalPages"  (click)="loadPage(page+1)">Next</button>
         </div>
         
         <div class="modal-buttons">
