--- a/frontend/src/app/component/menu/menu.component.html
+++ b/frontend/src/app/component/menu/menu.component.html
@@ -1,5 +1,7 @@
 <ul>
-    <li><span class="item-icon"><i class="fa fa-home"></i></span> <span class="item-name">Garden</span></li>
+    <li (click)="openGarden()">
+        <span class="item-icon"><i class="fa fa-home"></i></span> <span class="item-name">Garden</span>
+    </li>
     <li (click)="openTimeline()">
         <span class="item-icon"><i class="fa fa-clock"></i></span> <span class="item-name">Timeline</span>
     </li>
