fix(frontend): fix request to get stats

--- a/frontend/src/app/component/garden-modal/garden-modal.component.html
+++ b/frontend/src/app/component/garden-modal/garden-modal.component.html
@@ -3,7 +3,8 @@
         <hr />
         <h2>Garden</h2>
         <div class="card">
-            
+            <span>succeed: {{succeed}}</span>
+            <span>failed: {{failed}}</span>
         </div>
         
         <div class="modal-buttons">
