fix(frontend): disable tag creation in tag modal if opened from garden view

--- a/frontend/src/app/component/tag/tag.component.html
+++ b/frontend/src/app/component/tag/tag.component.html
@@ -13,7 +13,7 @@
                 </button>
             </div>
         </div>
-        <div class="card">
+        <div class="card" *ngIf="!disableCreation">
             <form id="form" [formGroup]="form">
                 <div>
                     <label for="name">Name</label>
