refactor(frontend/ui): add angular animations to menu

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,7 +1,9 @@
 <div class="container">
 		
-  <div class="menu" [class.hidden]="hideMenu">
-    <app-menu (settingsEvent)="openSettings()" (timelineEvent)="openTimeline()" (gardenEvent)="openGarden()"></app-menu>
+  <div class="menu" *ngIf="!hideMenu" @slideMenuAnimation>
+    <div class="menu-content">
+      <app-menu (settingsEvent)="openSettings()" (timelineEvent)="openTimeline()" (gardenEvent)="openGarden()"></app-menu>
+    </div>
   </div>
 
   <div class="window-container">
