feat(frontend/ui): style garden view

--- a/frontend/src/app/component/garden-modal/garden-modal.component.css
+++ b/frontend/src/app/component/garden-modal/garden-modal.component.css
@@ -20,3 +20,14 @@
 	color: #a6a6a6;
 	margin-right: 3px;
 }
+
+#form label {
+    margin-bottom: 3px;
+    color: #666;
+    font-size: smaller;
+}
+
+#form input {
+    margin-bottom: 7px;
+    border-radius: 7px;
+}
