--- a/frontend/src/app/component/garden-modal/garden-modal.component.html
+++ b/frontend/src/app/component/garden-modal/garden-modal.component.html
@@ -3,7 +3,7 @@
         <hr />
         <h2>Garden</h2>
         <div class="card">
-            <form [formGroup]="form">
+            <form [formGroup]="form" id="form">
                 <div>
                     <label for="after">After</label>
                 </div>
