--- a/frontend/src/app/component/timeline-modal/timeline-modal.component.css
+++ b/frontend/src/app/component/timeline-modal/timeline-modal.component.css
@@ -54,6 +54,7 @@
 .card {
     height: 250px;
     overflow-y: scroll;
+    width: 80%;
 }
 
 .event {
@@ -62,4 +63,16 @@
 	border-radius: 25px;
 	box-shadow: 0 3px 6px rgba(0,0,0,0.25), 0 2px 2px rgba(0,0,0,0.22);
 
+}
+
+.info {
+    display: flex;
+    flex-grow: 1;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 7px;
+}
+
+.info .fa {
+    color: #e8e8e8;
 }
