--- a/frontend/src/app/component/timeline-modal/timeline-modal.component.html
+++ b/frontend/src/app/component/timeline-modal/timeline-modal.component.html
@@ -27,6 +27,10 @@
                         <i class="fa fa-circle-xmark"></i>
                         {{pomodoro.finish | date: 'HH:mm dd MMM yyyy'}}
                     </span>
+                    <span>
+                        <i class="fa fa-hourglass"></i>
+                        {{pomodoro.minutes}} min.
+                    </span>
                 </div>
             </div>
             <button class="outlined-btn" [class.blocked]="page<=0" (click)="loadPage(page-1)">Prev</button>
