feat(frontend/ui): change images for events

--- a/frontend/src/app/component/timeline-modal/timeline-modal.component.html
+++ b/frontend/src/app/component/timeline-modal/timeline-modal.component.html
@@ -21,7 +21,7 @@
                         </g>
                     </svg>
                     <div class="plant-container">
-                        <img class="plant" src="../../../assets/tomato5.svg" />
+                        <img class="plant" src="../../../assets/{{getTomato(pomodoro)}}.svg" />
                     </div>
                 </div>
                 <div class="info">
