--- a/frontend/src/app/component/garden-modal/garden-modal.component.css
+++ b/frontend/src/app/component/garden-modal/garden-modal.component.css
@@ -31,3 +31,77 @@
     margin-bottom: 7px;
     border-radius: 7px;
 }
+
+.counter {
+	display: flex;
+	padding: 0;
+	border-radius: 15px;
+	border: 1px solid black;
+	overflow: hidden;
+}
+
+.counter.succeed {
+	margin-right: 5px;
+}
+
+.counter .counter-icon {
+	padding: 2px 7px;
+	background-color: gainsboro;
+	border-right: 1px solid darkslategray;
+}
+
+.counter.succeed .counter-icon {
+	color: rgb(97, 141, 97);
+}
+
+.counter.failed .counter-icon {
+	color: rgb(240, 118, 97);
+}
+
+
+.counter.succeed .count {
+	color: rgb(20, 68, 20);
+}
+
+.counter.failed .count {
+	color: rgb(119, 32, 16);
+}
+
+.counter .count {
+	padding: 2px 10px;
+	font-weight: 700;
+}
+
+.counters {
+	margin: 10px 0;
+	display: flex;
+	width: 100%;
+	justify-content: center;
+}
+
+.dates {
+	display: flex;
+}
+
+
+.apply-btn {
+	background-color: transparent;
+	color: #5db075;
+	border: none;
+	padding: 10px 0;
+	font-weight: 500;
+    cursor: pointer;
+}
+
+.apply-btn.blocked {
+	color: #e8e8e8;
+}
+
+.apply-btn:hover {
+    opacity: 0.8;
+}
+
+.bottom-form {
+	display: flex;
+	justify-content: space-between;
+}
